[package]
name = "EthCaller"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
ethers = { version = "2.0.4", default-features = false, features = ["rustls", "abigen"] }
ethers-providers = "2.0.4"
tokio = { version = "1.28.0", features = ["full"] }
